# network-watch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alert.py  docker-compose.yml  enrich.py  final_report.py  pyproject.toml  render.py  scan.sh  server.sh  ssdp_probe.py  web_probe.py
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md  security.md  setup.md  troubleshooting.md
scripts/: screenshot_dashboard.mjs
site/: churn.html  device.html  device_stats.json  fancy-timeline.html  fancy.html  graph.html  history.json  index.html  ip-history.html  latest.json  timeline.html
site/app/: app.css  app.js  index.html
site/app/learn/: lessons.json
tests/: test_render_smoke.py
tests/fixtures/state/: 20260207T000000Z.json
